--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,7 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-restful = "*"
 flask-jwt-extended = "*"
+flask-bcrypt = "*"
 
 [requires]
 python_version = "3.8"
