--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -11,6 +11,7 @@ flask-sqlalchemy = "*"
 flask-restful = "*"
 flask-jwt-extended = "*"
 flask-bcrypt = "*"
+flask-cors = "*"
 
 [requires]
 python_version = "3.8"
