continue and optimize models and resources

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -12,6 +12,7 @@ flask-restful = "*"
 flask-jwt-extended = "*"
 flask-bcrypt = "*"
 flask-cors = "*"
+pillow = "*"
 
 [requires]
 python_version = "3.8"
