implement socketio for order watcher to watch details state

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -13,6 +13,7 @@ flask-jwt-extended = "*"
 flask-bcrypt = "*"
 flask-cors = "*"
 pillow = "*"
+flask-socketio = "*"
 
 [requires]
 python_version = "3.8"
